services/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adguard
  name: adguard
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adguard
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - env:
            - name: ServerIP
              value: 192.168.1.2
          image: adguard/adguardhome:latest
          imagePullPolicy: IfNotPresent
          name: adguard
          ports:
            - containerPort: 80
              name: adguard-http
              protocol: TCP
            - containerPort: 53
              name: dns
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 443
              name: adguard-ssl
              protocol: TCP
            - containerPort: 3000
              name: adguard-setup
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: host-disk1
              mountPath: /opt/adguardhome/work
              subPath: adguard/work
            - name: host-disk1
              mountPath: /opt/adguardhome/conf
              subPath: adguard/conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
status: {}
