services/adguard/svc-tcp.yml
kind: Service
apiVersion: v1
metadata:
  name: adguard-tcp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard # < annotation name to combine the Service IP, make sure it's same name as in the service UDP yaml
spec:
  selector:
    app: adguard
  ports:
    - name: adguard-http
      port: 80
      protocol: TCP
      targetPort: adguard-http
    - name: adguard-https
      port: 443
      protocol: TCP
      targetPort: adguard-https
    - name: dns
      port: 53
      protocol: TCP
      targetPort: dns
    - name: adguard-setup
      port: 3000
      protocol: TCP
      targetPort: adguard-setup
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.1.84
