services/adguard/svc-udp.yml
kind: Service
apiVersion: v1
metadata:
  name: adguard-udp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard # < annotation name to combine the Service IP, make sure it's same name as in the service UDP yaml
spec:
  selector:
    app: adguard
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.1.84
